@@ -606,8 +606,6 @@ int	set_result_type(AGENT_RESULT *result, int value_type, char *c)
 
 static zbx_uint64_t* get_result_ui64_value(AGENT_RESULT *result)
 {
-	zbx_uint64_t tmp;
-
 	assert(result);
 
 	if(ISSET_UI64(result))
@@ -620,13 +618,17 @@ static zbx_uint64_t* get_result_ui64_value(AGENT_RESULT *result)
 	}
 	else if(ISSET_STR(result))
 	{
-		if(EOF != sscanf(result->str, ZBX_FS_UI64, &tmp))
-			SET_UI64_RESULT(result, tmp);
+		if (SUCCEED == is_uint(result->str))
+		{
+			SET_UI64_RESULT(result, zbx_atoui64(result->str));
+		}
 	}
 	else if(ISSET_TEXT(result))
 	{
-		if(EOF != sscanf(result->text, ZBX_FS_UI64, &tmp))
-			SET_UI64_RESULT(result, tmp);
+		if (SUCCEED == is_uint(result->text))
+		{
+			SET_UI64_RESULT(result, zbx_atoui64(result->text));
+		}
 	}
 	/* skip AR_MESSAGE - it is information field */
 
@@ -640,8 +642,6 @@ static zbx_uint64_t* get_result_ui64_value(AGENT_RESULT *result)
 
 static double* get_result_dbl_value(AGENT_RESULT *result)
 {
-	double tmp;
-
 	assert(result);
 
 	if(ISSET_DBL(result))
@@ -654,13 +654,17 @@ static double* get_result_dbl_value(AGENT_RESULT *result)
 	}
 	else if(ISSET_STR(result))
 	{
-		if(EOF != sscanf(result->str, ZBX_FS_DBL, &tmp))
-			SET_DBL_RESULT(result, tmp);
+		if (SUCCEED == is_double(result->str))
+		{
+			SET_DBL_RESULT(result, atof(result->str));
+		}
 	}
 	else if(ISSET_TEXT(result))
 	{
-		if(EOF != sscanf(result->text, ZBX_FS_DBL, &tmp))
-			SET_DBL_RESULT(result, tmp);
+		if (SUCCEED == is_double(result->text))
+		{
+			SET_DBL_RESULT(result, atof(result->text));
+		}
 	}
 	/* skip AR_MESSAGE - it is information field */
 
@@ -785,6 +789,40 @@ void	*get_result_value_by_type(AGENT_RESULT *result, int require_type)
 			break;
 		default:
 			break;
+	}
+	return NULL;
+}
+
+/******************************************************************************
+ *                                                                            *
+ * Function: get_result_value_by_value_type                                   *
+ *                                                                            *
+ * Purpose: return value of result in special type                            *
+ *          if value missed convert existed value to requested type           *
+ *                                                                            *
+ * Return value:                                                              *
+ *         NULL - if value are missed or can't be converted                   *
+ *                                                                            *
+ * Author: Aleksander Vladishev                                               *
+ *                                                                            *
+ * Comments:                                                                  *
+ *                                                                            *
+ ******************************************************************************/
+void	*get_result_value_by_value_type(AGENT_RESULT *result, int value_type)
+{
+	assert(result);
+
+	switch (value_type)
+	{
+		case ITEM_VALUE_TYPE_FLOAT:
+			return (void *)get_result_dbl_value(result);
+		case ITEM_VALUE_TYPE_STR:
+		case ITEM_VALUE_TYPE_LOG:
+			return (void *)get_result_str_value(result);
+		case ITEM_VALUE_TYPE_UINT64:
+			return (void *)get_result_ui64_value(result);
+		case ITEM_VALUE_TYPE_TEXT:
+			return (void *)get_result_text_value(result);
 	}
 	return NULL;
 }
